src/task/cluster/hst/snapshots/genin__task__cluster__hst__test__host_with_failure_domains.snap
---
source: src/task/cluster/hst/test.rs
expression: uncolorize(&host)
---
+----------------+----------------+----------------+-------------+-------------+
|                                   cluster                                    |
+----------------+----------------+----------------+-------------+-------------+
|                       dc-1                       |           dc-2            |
+----------------+----------------+----------------+-------------+-------------+
|    server-1    |    server-2    |    server-3    |  server-4   |  server-5   |
+----------------+----------------+----------------+-------------+-------------+
|   router-1     |  storage-1-2   |  storage-2-1   | storage-1-1 | storage-1-3 |
|   8081/3301    |  8081/3301     |  8081/3301     | 8081/3301   | 8081/3301   |
+----------------+----------------+----------------+-------------+-------------+
|  storage-2-3   | stateboard-1-1 | stateboard-1-2 | storage-2-2 |  cache-2-1  |
|  8082/3302     | 8082/3302      | 8082/3302      | 8082/3302   |  8082/3302  |
+----------------+----------------+----------------+-------------+-------------+
| stateboard-1-3 |                                 |  cache-2-3  |  cache-2-2  |
| 8083/3303      |                                 |  8083/3303  |  8083/3303  |
+----------------+----------------+----------------+-------------+-------------+
